--- a/TODO
+++ b/TODO
@@ -1,17 +1,18 @@
-Figure out how to handle loss of a node
-  - Shared config file?
-  - lithium launches phantom?
-  - recheck an old list?
-Lithium pairs?
-  - share the node list?
-  - overflow?
+Lithium pairs
 
-Selenium on Mac Integration.
+Selenium on Mac Integration
+  - simple testing
 
-Dead session clearing and reactivation.
+Testing
+
+Pod
+  - pod2html get on /, /help, and /usage
+
+Runbook
 
 Health Endpoint
+  - have to support json
   - Health endpoint should check usage.
   - v2 to poll connected nodes.
 
-Testing, Pod, Runbook.
+phantomjs/ghostdriver post /grid/register poll/status regular interval
